# CracklingPlusPlus_gpu

./: CMakeLists.txt  README.md
ExtractOfftargets/: CMakeLists.txt  ExtractOfftargets.cpp
ISSLScoreOfftargets/: ISSLScoreOfftargets.cpp  issl_cuda.cu  issl_cuda.cuh  main_cuda.cpp  ot_penalties.cpp  ot_penalties.hpp
ISSLScoreOfftargetsMMF/: ISSLScoreOfftargetsMMF.cpp
sample/: test_queries.txt
